--- a/svm.Ipynb
+++ b/svm.Ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 114,
    "id": "da7ee80b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 115,
    "id": "8021f8be",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 116,
    "id": "57c4effb",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 117,
    "id": "c3cb74c4",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,32 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "1d2f0e99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import f1_score, recall_score, accuracy_score, precision_score\n",
-    "# print(f1_score(y_true=Y, y_pred=pred))\n",
-    "# print(recall_score(y_true=Y, y_pred=pred))\n",
-    "# print(accuracy_score(y_true=Y, y_pred=pred))\n",
-    "# print(precision_score(y_true=Y, y_pred=pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 118,
    "id": "f339703a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0.13376252,  1.22546416, -1.80775862, -0.88172913]),\n",
-       " np.float64(2.400000000000001))"
+       "(array([-0.0445771 ,  0.84874307, -1.466692  , -0.65883094]),\n",
+       " np.float64(2.3000000000000007))"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 119,
    "id": "618e95c7",
    "metadata": {},
    "outputs": [],
@@ -183,7 +169,6 @@
     "    x0_2 = np.amax(X[:, 0])\n",
     "    colors = ['b', 'g', 'r', 'c', 'm', 'y', 'k', 'w']\n",
     "    for i, svm in enumerate(svms):\n",
-    "        \n",
     "        x1_1 = get_hyperplane_value(x0_1, svm.w, svm.b, 0)\n",
     "        x1_2 = get_hyperplane_value(x0_2, svm.w, svm.b, 0)\n",
     "        ax.plot([x0_1, x0_2], [x1_1, x1_2], colors[i])\n",
@@ -200,7 +185,7 @@
    "id": "a34e3830",
    "metadata": {},
    "source": [
-    " Окей, получился svm, который пытается разделить объекты на два класса. Обобщаем для многоклассовой классификации"
+    " Окей, получился svm, который пытается линейно (!!!) разделить объекты на два класса. Обобщаем для многоклассовой классификации"
    ]
   },
   {
@@ -210,7 +195,7 @@
    "source": [
     "<h1>\"Все против всех\" или \"Один против всех\" ??</h1> \n",
     "\n",
-    "В случае один против всех будет слишком большой дисбаланс классов, что приведет к нелучшим результатам. А метод Все против всех у нас количество классификаторов растет квадратично. Поэтому нужно решить, что нам подходит больше. Ествественно, если у нас классов меньше, например, 5, лучше использовать all-vs-all. В айрис датасете всего 3 класса, поэтому почему бы не пожертвовать 3 секундами вычисления для более точной классификации\n"
+    "В случае one-vs-all будет слишком большой дисбаланс классов, что приведет к нелучшим результатам. А в методе all-vs-all количество классификаторов растет квадратично. Поэтому нужно решить, что нам подходит больше. Ествественно, если у нас классов меньше, например, 5, лучше использовать all-vs-all. В айрис датасете всего 3 класса, поэтому почему бы не пожертвовать 3 секундами вычисления для более точной классификации\n"
    ]
   },
   {
@@ -223,12 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 120,
    "id": "d0c5d786",
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
+    "from sklearn.metrics import f1_score, recall_score, accuracy_score, precision_score\n",
     "class all_vs_all(ClassifierMixin):\n",
     "    def __init__(self, lam=0.01, lr=0.1, epochs=200):\n",
     "        super(all_vs_all).__init__()\n",
@@ -258,12 +244,25 @@
     "            svm.fit(X=x, Y=y)\n",
     "            self.svms.append(svm)\n",
     "            if pr: \n",
-    "                self.print_score(svm,x,y,cl1,cl2)\n"
+    "                self.print_score(svm,x,y,cl1,cl2)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        predicts = []\n",
+    "        for svm in self.svms:\n",
+    "            predicts.append(svm.predict(X))\n",
+    "        predicts = np.array(predicts)\n",
+    "        ans = []\n",
+    "        for col in range(predicts.shape[1]):\n",
+    "            counts = np.bincount(predicts[:,col])\n",
+    "            ans.append(np.argmax(counts))\n",
+    "            \n",
+    "        return np.array(ans)\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "2d93155e",
    "metadata": {},
    "outputs": [
@@ -284,17 +283,67 @@
       "precision 1.0 \n",
       "\n",
       "SVM classes 1 and 2\n",
-      "f1 0.8849557522123894\n",
+      "f1 0.9009009009009009\n",
       "recall 1.0\n",
-      "accuracy 0.87\n",
-      "precision 0.7936507936507936 \n",
+      "accuracy 0.89\n",
+      "precision 0.819672131147541 \n",
       "\n"
      ]
     }
    ],
    "source": [
     "clf = all_vs_all()\n",
-    "clf.fit(X,Y, pr=True)\n"
+    "clf.fit(X,Y, pr=True)\n",
+    "pred=clf.predict(X)\n",
+    "#clf.print_hyperplanes() # корректно отобразит только если признака два."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "4b85f9a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2,\n",
+       "       1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 1, 2, 1, 2, 2, 1, 1, 2, 2, 2, 2,\n",
+       "       2, 1, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 1])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "c1349d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9266666666666666"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(y_pred=pred, y_true=Y, average='micro')"
    ]
   }
  ],
